--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ title: Hack Weekends
         <h4>Social</h4>
         <ul>
           <li>Twitter: <a href="https://twitter.com/kiicorp" target="_blank">@Kii</a></li>
-          <li>Hashtag: <a href="https://twitter.com/search?q=%23kiihackseattle&src=typd" target="_blank">#kiihackseattle</a></li></li>
+          <li>Hashtag: <a href="https://twitter.com/search?q=%23kiihackla&src=typd" target="_blank">#kiihackla</a></li></li>
           <li>Facebook: <a href="http://www.facebook.com/kiicorp" target="_blank">http://www.facebook.com/kiicorp</a></li></li></li>
           <li>LinkedIn: <a href="http://www.linkedin.com/company/1406171" target="_blank">http://www.linkedin.com/company/1406171</a></li></li></li>
         </ul> 
