--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Hack Weekends
 ---
         <h3>Kii Hackathon - Los Angeles</h3>
 <p align="center" style="color:#FF0000; padding-top: 10px;"><strong>[This Hackathon is Under Construction]</strong></p>
-        <table width="250" align="right" style="float:right; border: 0px #FFF; text-align:center;" border="0" cellpadding="0" cellspacing="0"><tr><td style="border: 0px #FFF;"><a href="http://kii.com/" target="_blank"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/kii/Kii-Logo.png" align="right" width="250" style="padding: 15px; width: 250px; float:right;" /></a></td></tr><tr><td align="center" style="border: 0px #FFF; text-align:center;"><strong>Empowered by <a href="http://kii.com/" target="_blank">Kii</a></strong></td></tr></table>
+        <a href="http://kii.com/" target="_blank"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/kii/Kii-Logo.png" align="right" width="250" style="padding: 15px; width: 250px; float:right;" /></a>
         <h4>What</h4>
         <p>Mobile Backend as a Service provider Kii is planning a hackathon in Los Angeles in March.</p>
         <p>This hackathon is still being planned, if you want to get involved please email info@apievangelist.com.</p>        
